# libvterm-rs

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
benches/: lib.rs
examples/: unterm.rs
src/: events.rs  geom.rs  glyph_info.rs  lib.rs  screen.rs  screen_callbacks.rs  screen_cell.rs  state.rs  state_callbacks.rs  vterm.rs
src/ffi/: bindings.rs  cell.rs  glyph_info.rs  mod.rs  parser.rs  screen.rs  state.rs  vterm.rs
tests/: lib.rs
tests/rs/: screen.rs  screen_callbacks.rs  state_callbacks.rs
tests/support/: cap_builder.rs
