[package]
authors = ["Andy Hartford <hartforda@gmail.com>"]
description = "FFI bindings to libvterm"
homepage = "https://github.com/ajh/libvterm-rs"
keywords = ["term", "ansi_term", "terminal", "vterm"]
license = "MIT"
name = "vterm-sys"
readme = "README.md"
repository = "https://github.com/ajh/libvterm-rs"
version = "0.1.0"

build = "build.rs"
links = "libvterm"

[dependencies]
log = "0.3"
libc = "0.2"
euclid = "0.6.4"

[build-dependencies]
cc = "1.0.68"
glob = "0.2.10"

[dev-dependencies]
docopt = "1.1"
pty = "0.1.5"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
term = "0.2"
termios = "0.2"
